<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >
        <item android:title="@string/app_name" >
            <menu>
                <item android:id="@+id/menu_appList" android:icon="@drawable/list3"
                    android:title="@string/menu_appList"/>
                <item android:id="@+id/menu_function1" android:icon="@drawable/class2"
                                 android:title="@string/menu_abc123" />
                <item android:id="@+id/menu_about" android:icon="@drawable/setting"
                    android:title="@string/about_txv1" />
            </menu>
        </item>
    </group>
    <!--<group android:checkableBehavior="single">-->
        <!--<item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"-->
            <!--android:title="Import" />-->
        <!--<item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    <!--</group>-->

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>