<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Step.StepStop"
    android:background="#F8E8B5">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@drawable/test"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/all"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/stats_totalstep"
                android:textSize="28dp"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:text="0"
                android:textStyle="bold"
                android:textSize="30dp"
                android:id="@+id/stats_total_step"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step_txv2"
                android:id="@+id/textView11"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@drawable/test"
        android:padding="5dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/today" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.6" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/stats_todaystep"
                android:textSize="28dp"
                android:id="@+id/textView10"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:text="0"
                android:textStyle="bold"
                android:textSize="30dp"
                android:id="@+id/stats_today_step"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step_txv2"
                android:id="@+id/textView13"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/test"
        android:padding="5dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:src="@drawable/distance" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.6" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/stats_distance"
                android:textSize="28dp"
                android:id="@+id/textView14"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:text="0"
                android:textStyle="bold"
                android:textSize="30dp"
                android:id="@+id/stats_distance"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/stats_km"
                android:id="@+id/textView16"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/test"
        android:padding="5dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/sleep" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.6" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/stats_usephonetime"
                android:textSize="28dp"
                android:id="@+id/textView17"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:text="0"
                android:textStyle="bold"
                android:textSize="30dp"
                android:id="@+id/stats_use_phone_time"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/stats_hr"
                android:id="@+id/textView19"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
