<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Step.StepStop"
    android:background="#F8E8B5">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about_txv1"
        android:id="@+id/textView3"
        android:textSize="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="102dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_txv2"
                android:textSize="30dp"
                android:textColor="#000000"
                android:id="@+id/textView5"
                android:layout_gravity="center"/>
            />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/switch_about"
                android:textOn="On"
                android:textOff="Off"
                android:showText="true"
                android:textSize="28dp"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:id="@+id/StepLimt">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.27"
            android:id="@+id/SL_txv">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_txv3"
                android:textSize="30dp"
                android:textColor="#000000"
                android:id="@+id/textView6"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/SL_seekbar">

                <SeekBar
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/seekBar_about"
                    android:max="3"
                    android:progress="0"
                    android:layout_marginRight="20dp"
                    android:layout_weight="0.6"
                    android:indeterminate="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:text="5"
                        android:textColor="#000000"
                        android:id="@+id/textView7" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20"
                        android:textSize="25dp"
                        android:textColor="#000000"
                        android:layout_marginRight="10dp"
                        android:id="@+id/textView8"
                        android:layout_gravity="right"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>


</RelativeLayout>
